--- a/charts/wg-access-server/templates/secret.yaml
+++ b/charts/wg-access-server/templates/secret.yaml
@@ -7,8 +7,15 @@ metadata:
     {{- include "wg-access-server.labels" . | nindent 4 }}
 type: Opaque
 data:
-  privateKey: {{ .Values.wireguard.config.privateKey | b64enc | quote }}
-  {{- if .Values.web.config.adminUsername }}
-  adminUsername: {{ .Values.web.config.adminUsername | b64enc | quote }}
+  {{- if and .Values.wireguard.config.secretRefKeys.privateKey (not .Values.wireguard.config.existingSecret) }}
+  {{ .Values.wireguard.config.secretRefKeys.privateKey }}: {{ .Values.wireguard.config.privateKey | b64enc | quote }}
   {{- end }}
-  adminPassword: {{ (include "wg-access-server.adminPassword" .) | b64enc | quote }}
+  {{- if not .Values.web.config.existingSecret }}
+  {{- if .Values.web.config.adminUsername }}
+  {{ .Values.web.config.secretRefKeys.adminUsername }}: {{ .Values.web.config.adminUsername | b64enc | quote }}
+  {{- end }}
+  {{ .Values.web.config.secretRefKeys.adminPassword }}: {{ (include "wg-access-server.adminPassword" .) | b64enc | quote }}
+  {{- end }}
+  {{- if and .Values.postgresql.uri (not .Values.postgresql.existingSecret) }}
+  {{ .Values.postgresql.secretRefKeys.uri }}: {{ .Values.postgresql.uri | b64enc | quote }}
+  {{- end }}
