--- a/charts/wg-access-server/templates/deployment.yaml
+++ b/charts/wg-access-server/templates/deployment.yaml
@@ -45,30 +45,37 @@ spec:
           env:
             - name: WG_WIREGUARD_PORT
               value: {{ .Values.wireguard.service.port | quote }}
-            {{- if .Values.wireguard.config.privateKey }}
             - name: WG_WIREGUARD_PRIVATE_KEY
               valueFrom:
                 secretKeyRef:
-                  name: "{{ $fullName }}"
-                  key: privateKey
-            {{- end }}
-            {{- if .Values.web.config.adminUsername }}
+                  name: {{ include "wg-access-server.wireguardConfigSecretName" . | quote }}
+                  key: {{ .Values.wireguard.config.secretRefKeys.privateKey }}
             - name: WG_ADMIN_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: "{{ $fullName }}"
-                  key: adminUsername
-            {{- end}}
+                  name: {{ include "wg-access-server.webConfigSecretName" . | quote }}
+                  key: {{ .Values.web.config.secretRefKeys.adminUsername }}
             - name: WG_ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ $fullName }}"
-                  key: adminPassword
+                  name: {{ include "wg-access-server.webConfigSecretName" . | quote }}
+                  key: {{ .Values.web.config.secretRefKeys.adminPassword }}
+            - name: WG_STORAGE
+              {{- if .Values.postgresql.enabled }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "wg-access-server.postgresqlConnectionSecretName" . | quote }}
+                  key: {{ .Values.postgresql.secretRefKeys.uri }}
+              {{- else}}
+              value: "sqlite3:///data/db.sqlite3"
+              {{- end }}
           volumeMounts:
             - name: tun
               mountPath: /dev/net/tun
+            {{- if not .Values.postgresql.enabled }}
             - name: data
               mountPath: /data
+            {{- end }}
             - name: config
               mountPath: /config.yaml
               subPath: config.yaml
@@ -83,14 +90,15 @@ spec:
           hostPath:
             type: 'CharDevice'
             path: /dev/net/tun
+      {{- if not .Values.postgresql.enabled }}
         - name: data
         {{- if .Values.persistence.enabled }}
           persistentVolumeClaim:
             claimName: {{ if .Values.persistence.existingClaim }}{{ .Values.persistence.existingClaim }}{{- else }}{{ $fullName }}{{- end }}
-        {{- end }}
-        {{- if not .Values.persistence.enabled }}
+        {{- else }}
           emptyDir: {}
         {{- end }}
+      {{- end }}
         - name: config
           configMap:
             name: "{{ $fullName }}"
