--- a/charts/wg-access-server/templates/deployment.yaml
+++ b/charts/wg-access-server/templates/deployment.yaml
@@ -28,6 +28,10 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+    {{- with .Values.initContainers }}
+      initContainers:
+        {{- tpl . $ | nindent 8 }}
+    {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
