--- a/charts/wg-access-server/templates/deployment.yaml
+++ b/charts/wg-access-server/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
     {{- end }}
     {{- with .Values.initContainers }}
       initContainers:
-        {{- tpl . $ | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
     {{- end }}
       containers:
         - name: {{ .Chart.Name }}
