--- a/charts/wg-access-server/templates/secret.yaml
+++ b/charts/wg-access-server/templates/secret.yaml
@@ -10,7 +10,7 @@ data:
   {{- if and .Values.wireguard.config.secretRefKeys.privateKey (not .Values.wireguard.config.existingSecret) }}
   {{ .Values.wireguard.config.secretRefKeys.privateKey }}: {{ .Values.wireguard.config.privateKey | b64enc | quote }}
   {{- end }}
-  {{- if not .Values.web.config.existingSecret }}
+  {{- if and .Values.web.config.basicAuthEnabled (not .Values.web.config.existingSecret) }}
   {{- if .Values.web.config.adminUsername }}
   {{ .Values.web.config.secretRefKeys.adminUsername }}: {{ .Values.web.config.adminUsername | b64enc | quote }}
   {{- end }}
@@ -18,4 +18,7 @@ data:
   {{- end }}
   {{- if and .Values.postgresql.uri (not .Values.postgresql.existingSecret) }}
   {{ .Values.postgresql.secretRefKeys.uri }}: {{ .Values.postgresql.uri | b64enc | quote }}
+  {{- end }}
+  {{- if and .Values.secretConfig.config (not .Values.secretConfig.existingSecret) }}
+  {{ .Values.secretConfig.secretRefKeys.config }}: {{ toYaml .Values.secretConfig.config | b64enc | quote }}
   {{- end }}
