set WG_CONFIG environment variable

--- a/charts/wg-access-server/templates/deployment.yaml
+++ b/charts/wg-access-server/templates/deployment.yaml
@@ -91,6 +91,8 @@ spec:
               {{- else}}
               value: "sqlite3:///data/db.sqlite3"
               {{- end }}
+            - name: WG_CONFIG
+              value: "/config.yaml"
           volumeMounts:
             - name: tun
               mountPath: /dev/net/tun
