--- a/charts/wg-access-server/values.yaml
+++ b/charts/wg-access-server/values.yaml
@@ -40,6 +40,7 @@ wireguard:
     externalTrafficPolicy: ""
     ipFamilyPolicy: SingleStack
     loadBalancerIP: ""
+    externalIPs: []
     port: 51820
     nodePort: ""
 
