--- a/charts/wg-access-server/values.yaml
+++ b/charts/wg-access-server/values.yaml
@@ -77,7 +77,7 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   ingressClassName: ""
   hosts: []
-    # - www.example.com
+    # - vpn.example.com
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
