--- a/charts/wg-access-server/templates/secret.yaml
+++ b/charts/wg-access-server/templates/secret.yaml
@@ -16,8 +16,8 @@ data:
   {{- end }}
   {{ .Values.web.config.secretRefKeys.adminPassword }}: {{ (include "wg-access-server.adminPassword" .) | b64enc | quote }}
   {{- end }}
-  {{- if and .Values.postgresql.uri (not .Values.postgresql.existingSecret) }}
-  {{ .Values.postgresql.secretRefKeys.uri }}: {{ .Values.postgresql.uri | b64enc | quote }}
+  {{- if and .Values.storage.uri (not .Values.storage.existingSecret) }}
+  {{ .Values.storage.secretRefKeys.uri }}: {{ .Values.storage.uri | b64enc | quote }}
   {{- end }}
   {{- if and .Values.secretConfig.config (not .Values.secretConfig.existingSecret) }}
   {{ .Values.secretConfig.secretRefKeys.config }}: {{ toYaml .Values.secretConfig.config | b64enc | quote }}
