--- a/charts/wg-access-server/Chart.yaml
+++ b/charts/wg-access-server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v0.9.0
-description: A Wireguard VPN Access Server
+appVersion: v0.10.1
+description: A WireGuard VPN Access Server
 name: wg-access-server
-version: 0.12.0
+version: 0.12.1
