--- a/charts/wg-access-server/values.yaml
+++ b/charts/wg-access-server/values.yaml
@@ -1,16 +1,51 @@
 # wg-access-server config
 config:
-  # IPv6 is disabled by default, since it leads to the pod failing if the
-  # k8s-cluster is not configured with IPv6 support
+  # The global log level
+  logLevel: info
+  # Turn off collection of device metadata logging. Includes last handshake time and RX/TX bytes only.
+  disableMetadata: false
+  # Enable/Disable the automatic deletion of inactive devices.
+  enableInactiveDeviceDeletion: false
+  # The duration after which inactive devices are automatically deleted, if automatic deletion is enabled. A device is inactive if it has not been connected to the server for longer than the inactive device grace period. The duration format is the go duration string format
+  inactiveDeviceGracePeriod: 8760h
+  # Change the name of the configuration file the user can download (Do not include the '.conf' extension )
+  filename: WireGuard
+  dns:
+    # Enable/disable the embedded DNS proxy server. This is enabled by default and allows VPN clients to avoid DNS leaks by sending all DNS requests to wg-access-server itself.
+    enabled: true
+    # The upstream DNS servers to proxy DNS requests to. By default the host machine's resolveconf configuration is used to find its upstream DNS server, with a fallback to Cloudflare.
+    #upstream: resolvconf
+    # A domain to serve configured devices authoritatively. Queries for names in the format .. will be answered with the device's IP addresses.
+    domain:
+  wireguard:
+    # Enable/disable the wireguard server. Useful for development on non-linux machines.
+    enabled: true
+    # The wireguard network interface name
+    interface: wg0
+    # The maximum transmission unit (MTU) to be used on the server-side interface.
+    mtu: 1420
   vpn:
+    # The VPN IPv4 network range. VPN clients will be assigned IP addresses in this range. Set to 0 to disable IPv4.
+    cidr: 10.44.0.0/24
+    # IPv6 is disabled by default, since it leads to the pod failing if the k8s-cluster is not configured with IPv6 support
     cidrv6: 0
-
-  # Declare a custom DNS entry to be written into the wg-quick client config file.
-  # Adapt to your needs or remove if you want the wg-access-server to act as DNS server.
+    # Disables NAT for IPv4
+    nat44: true
+    # Disables NAT for IPv6
+    nat66: true
+    # BLock or allow traffic between client devices (client isolation)
+    clientIsolation: false
+    # The VPN gateway interface. VPN client traffic will be forwarded to this interface.
+    # gatewayInterface: default gateway interface (e.g. eth0)
+    # Allowed IPs that clients may route through this VPN. This will be set in the client's WireGuard connection file and routing is also enforced by the server using iptables.
+    allowedIPs:
+      - "0.0.0.0/0"
+      - "::/0"
   clientConfig:
     dnsServers:
       - ""
     dnsSearchDomain: ""
+    mtu: ""
 
 secretConfig:
   config: {}
