--- a/charts/wg-access-server/templates/secret.yaml
+++ b/charts/wg-access-server/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- $fullName := include "wg-access-server.fullname" . -}}
+{{- $fullName := include "wg-access-server.name" . -}}
 apiVersion: v1
 kind: Secret
 metadata:
