--- a/charts/wg-access-server/templates/configmap.yaml
+++ b/charts/wg-access-server/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "wg-access-server.fullname" . }}
+  name: {{ include "wg-access-server.name" . }}
   labels:
     {{- include "wg-access-server.labels" . | nindent 4 }}
 data:
