add default for PersistentKeepalive (#31)
* add default for PersistentKeepalive

* bump Chart version

* Update values.yaml

---------

Co-authored-by: Felix <8057646+GoliathLabs@users.noreply.github.com>

--- a/charts/wg-access-server/values.yaml
+++ b/charts/wg-access-server/values.yaml
@@ -44,10 +44,10 @@ config:
     # optionally disable automatic iptable configuration
     disableIPTables: false
   clientConfig:
-    dnsServers:
-      - ""
+    dnsServers: []
     dnsSearchDomain: ""
-    mtu: ""
+    mtu: 1420
+    persistentkeepalive: 0
   https:
     # Enable HTTPS for the web UI
     enabled: false
